# social_life_counter

./: brainstorm.md
backend/: pyproject.toml
backend/server/: server.py
frontend/: angular.json  package-lock.json  package.json
frontend/src/: index.html
frontend/src/app/: app.component.html  app.component.ts
frontend/src/app/counter/: counter.component.html  counter.component.ts
frontend/src/app/counter-service/: counter-service.module.ts
